--- a/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
@@ -1,18 +1,13 @@
 ---
 
 - debug:
-    msg: "'{{ lookup('ansible.builtin.env', 'GITHUB_TOKEN') }}'"
-  delegate_to: localhost
-  become: no
-
-- debug:
     msg: "'{{ lookup('ansible.builtin.env', 'GH_TOKEN') }}'"
   delegate_to: localhost
   become: no
 
 - name: Test
   shell: |
-    echo "${GH_TOKEN}" | gh auth login --with-token
+    # echo "${GH_TOKEN}" | gh auth login --with-token
     gh workflow run oracle-db-statistics.yml --ref DBA-651 -f TargetEnvironment=delius-core-dev
   environment:
     GH_TOKEN:  "'{{ lookup('ansible.builtin.env', 'GH_TOKEN') }}'"
