--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -8,12 +8,12 @@ on:
         required: true
         type: choice
         options:
-          - "delius-core-dev-preapproved"
-          - "delius-core-test-preapproved"
-          - "delius-core-training-preapproved"
-          - "delius-core-stage-preapproved"
-          - "delius-core-pre-prod-preapproved"
-          - "delius-core-prod-preapproved"
+          - "delius-core-dev"
+          - "delius-core-test"
+          - "delius-core-training"
+          - "delius-core-stage"
+          - "delius-core-pre-prod"
+          - "delius-core-prod"
       TargetHost:
         description: "Backup target host"
         required: true
@@ -110,7 +110,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       RmanTarget: ${{ steps.preparermantargetname.outputs.RmanTarget }}
-      TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}
+      TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}-preapproved
     steps:
       - name: Prepare Rman Target
         id: preparermantargetname
