--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -3,11 +3,20 @@
 
 - name: Oracle backup
   hosts: '{{ rman_target | default("localhost", true) }}'
-  gather_facts: yes
+  gather_facts: no
   become: yes
   become_user: oracle
   become_method: sudo
 
   tasks:
+    - shell: |
+             hostname
+      register: get_hostname
+
+    - debug:
+        var: get_hostname
+
     - debug:
         msg: "NOT RUNNING"
+
+    
