--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -135,7 +135,7 @@ jobs:
     environment: ${{needs.build_rman_target_name.outputs.TargetEnvironment}}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.40.0-beta.0
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
       options: --user root
     timeout-minutes: 1440
     env:
