Use existing bucket

--- a/ansible/group_vars/dev.yml
+++ b/ansible/group_vars/dev.yml
@@ -1,3 +1,4 @@
 ---
 ansible_python_interpreter: /usr/bin/python3.9
 ansible_aws_ssm_bucket_name: ldap-dev-migration20240123173113114100000001
+#ansible_aws_ssm_bucket_name: delius-core-development-openldap-migration
