--- a/playbooks/oracle_backup/backup.yml
+++ b/playbooks/oracle_backup/backup.yml
@@ -9,6 +9,11 @@
   become_method: sudo
 
   tasks:
+
+    - name: SSM Bucket to Use
+      debug:
+         var: ansible_aws_ssm_bucket_name
+
     - name: RMAN script
       block:
         - name: Set database_global_database
