--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -201,6 +201,7 @@ jobs:
         run: |
           echo "Using bucket ${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
           echo "Not using bucket ${ANSIBLE_AWS_SSM_BUCKET_NAME}"
+          env
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
           $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
