Use vars instead

--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -199,12 +199,12 @@ jobs:
         id: backup
         continue-on-error: true
         run: |
-          echo "Using bucket ${{ env.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
+          echo "Using bucket ${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
           echo "Not using bucket ${ANSIBLE_AWS_SSM_BUCKET_NAME}"
           env
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ env.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
 
       - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
         if: ${{ steps.backup.outcome == 'failure' && contains(env.RmanTarget,'primarydb') }}
