--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -24,7 +24,7 @@ on:
       GatherParallelism:
         description: "Degree of Parallelism to use for gathering new statistics (ignored if GatherNewStatistics = no)."
         type: choice
-        default: "2"
+        default: "1"
         options: 
           - "1"
           - "2"
@@ -50,8 +50,6 @@ on:
         options:
           - "None"
           - "delius-core-dev"
-          - "delius-core-test"
-          - "delius-core-training"
           - "delius-core-stage"
           - "delius-core-pre-prod"
       VerboseOutput:
@@ -82,18 +80,15 @@ permissions:
   id-token: write
 
 jobs:          
-  oracle_delius_statistics:
-    name: oracle-delius-statistics
+  oracle_gather_delius_statistics:
+    if: ${{ github.event.inputs.ImportSourceEnvironment == 'None' }}
+    name: oracle-gather-delius-statistics
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     timeout-minutes: 1440
     continue-on-error: false
-    outputs:
-      TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
-      TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
-      RotateGroups: ${{ steps.definetargets.outputs.targets }}
     steps:
 
       - name: Prepare Target Name
@@ -123,15 +118,72 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      # - name: Install GH CLI
+      #   uses: dev-hanz-ops/install-gh-cli-action@v0.1.0
+      #   with:
+      #     gh-cli-version: 2.32.0
+
+      - name: Start Ansible Gather Delius Statistics
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} \
+          -e import_source_environment=None \
+          -e gather_new_statistics=${{ github.event.inputs.GatherNewStatistics }} \
+          -e statistics_identifier=${{ github.event.inputs.StatisticsIdentifier }} \
+          -e export_to_s3=${{ github.event.inputs.ExportBackupStatisticsToS3 }}  \
+          -e parallelism=${{ github.event.inputs.GatherParallelism }} ${{ github.event.inputs.VerboseOutput }}
+
+  oracle_export_delius_statistics:
+    if: ${{ github.event.inputs.ImportSourceEnvironment != 'None' }}
+    name: oracle-export-delius-statistics
+    environment: ${{ github.event.inputs.ImportSourceEnvironment }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    outputs:
+      RemoteStatisticsIdentifier: ${{ steps.preparetargetname.outputs.RemoteStatisticsIdentifier }}
+    steps:
+
+      - name: Prepare Target Name And Remote Statistics Identifier
+        id: preparetargetname
+        run: |
+          echo TargetHost="environment_name_$(echo ${{ github.event.inputs.ImportSourceEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
+          DATE=$(date +"%Y%m%dT%H%M%S")
+          ENV=$(echo ${{ github.event.inputs.ImportSourceEnvironment }} | awk -F- '{print $NF}')
+          echo RemoteStatisticsIdentifier="${ENV^^}_${DATE}" >> $GITHUB_OUTPUT
+
+      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_statistics
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-            ansible/roles/secretsmanager-passwords
-            ansible/roles/get-modernisation-platform-facts
-          path: roles
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
@@ -143,20 +195,72 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Install GH CLI
-        uses: dev-hanz-ops/install-gh-cli-action@v0.1.0
-        with:
-          gh-cli-version: 2.32.0
-
-      - name: Start Ansible Gather Delius Statistics
+      - name: Start Ansible Export Delius Statistics From Remote Environment
         shell: bash
         run: |
-          export GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} \
           -e import_source_environment=${{ github.event.inputs.ImportSourceEnvironment }} \
-          -e gather_new_statistics=${{ github.event.inputs.GatherNewStatistics }} \
-          -e statistics_identifier=${{ github.event.inputs.StatisticsIdentifier }} \
-          -e export_to_s3=${{ github.event.inputs.ExportBackupStatisticsToS3 }} \
+          -e gather_new_statistics=no \
+          -e statistics_identifier=${{ steps.preparetargetname.outputs.RemoteStatisticsIdentifier }} \
+          -e export_to_s3=yes \
+          -e parallelism=${{ github.event.inputs.GatherParallelism }} ${{ github.event.inputs.VerboseOutput }}
+
+  oracle_import_delius_statistics:
+    needs: oracle_export_delius_statistics
+    name: oracle-import-delius-statistics
+    environment: ${{ github.event.inputs.TargetEnvironment }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
+
+      - name: Prepare Target Name
+        id: preparetargetname
+        run: echo TargetHost="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
+
+      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_statistics
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Start Ansible Import Delius Statistics From Remote Environment
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} \
+          -e import_source_environment=${{ github.event.inputs.ImportSourceEnvironment }} \
+          -e gather_new_statistics=no \
+          -e statistics_identifier=${{ needs.oracle_export_delius_statistics.outputs.RemoteStatisticsIdentifier }} \
+          -e export_to_s3=no \
           -e parallelism=${{ github.event.inputs.GatherParallelism }} ${{ github.event.inputs.VerboseOutput }}
