--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -126,11 +126,6 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      # - name: Install GH CLI
-      #   uses: dev-hanz-ops/install-gh-cli-action@v0.1.0
-      #   with:
-      #     gh-cli-version: 2.32.0
-
       - name: Start Ansible Gather Delius Statistics
         shell: bash
         run: |
@@ -161,10 +156,12 @@ jobs:
         shell: bash
         run: |
           echo TargetHost="environment_name_$(echo ${{ github.event.inputs.ImportSourceEnvironment }} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_delius_primarydb" >> $GITHUB_OUTPUT
-          DATE=$(date +"%Y%m%dT%H%M%S")
-          ENV=$(echo ${{ github.event.inputs.ImportSourceEnvironment }} | awk -F- '{print $NF}')
-          echo RemoteStatisticsIdentifier="${ENV^^}_${DATE}" >> $GITHUB_OUTPUT
-
+          if [[ -z ${{ github.event.inputs.StatisticsIdentifier }} ]]
+          then
+            DATE=$(date +"%Y%m%dT%H%M%S")
+            ENV=$(echo ${{ github.event.inputs.ImportSourceEnvironment }} | awk -F- '{print $NF}')
+            echo RemoteStatisticsIdentifier="${ENV^^}_${DATE}" >> $GITHUB_OUTPUT
+          fi
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
         with:
